// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationsList snapshot: empty 1`] = `
<ul
  className="notifications-list"
/>
`;

exports[`NotificationsList snapshot: with notifications 1`] = `
<ul
  className="notifications-list"
>
  <li
    className="notifications-list-item"
  >
    <button
      className="notifications-bubble notifications-bubble--info"
      onClick={[Function]}
    >
      Something happened
    </button>
  </li>
</ul>
`;

exports[`NotificationsListConnect snapshot: connected to store with notifications 1`] = `
<Component
  notifications={
    Array [
      Object {
        "id": "id",
        "text": "text",
        "type": "info",
      },
    ]
  }
  remove={[Function]}
>
  <ul
    className="notifications-list"
  >
    <li
      className="notifications-list-item"
    >
      <button
        className="notifications-bubble notifications-bubble--info"
        onClick={[Function]}
      >
        text
      </button>
    </li>
  </ul>
</Component>
`;
